syntax = "proto3";
package net.ixitxachitls.companion.proto;

import "value.proto";
import "entity.proto";

message SettingsProto {
  string nickname = 1;
  string app_id = 2;
}

message CampaignProto {
  string name = 1;
  string world = 2;
  bool remote = 3;
  string id = 4;
  string dm = 5;
  bool published = 6;
}

message CharacterProto {
  string id = 1;
  string name = 2;
  string race = 3;
  Gender gender = 4;

  message Level {
    string name = 1;
    int32 hp = 2;
    repeated ParametrizedEntityProto quality = 3;
    repeated ParametrizedEntityProto feat = 4;
    Ability ability_increase = 5;
    repeated string spell_known = 6;
  }
  repeated Level level = 5;
  string campaign_id = 6;
}

message CompanionMessageProto {
  string sender = 1;
  string debug = 2;

  // General information.
  message Welcome {
    string name = 1;
    string id = 2;
  }
  Welcome welcome = 4;

  // Server push information.
  CampaignProto campaign = 3;

  // Client push information
  CharacterProto character = 5;
}
